# Parametric_Portal

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  .npmrc  AGENTS.MD  AGENTS.md  ANALYSIS.md  BACKEND.md  CHANGELOG.md  CI_CD.md  CLAUDE.MD  CLAUDE.md  CLAUDE_old.md  Directory.Build.props  GEMINI.md  REQUIREMENTS.md  REQUIREMENTS_NEW.md  ROOT_REVIEW.md  SKILL-py.md  TASK_FINAL.md  TASK_a.md  TASK_b.md  TASK_c.md  VITE_CONFIG_RESEARCH.md  _typos.toml  biome.json  compass_artifact_wf-7a534742-fac1-42b3-b6c9-33b6d3192dbf_text_markdown.md  error-refactoring.md  eslint.sonar.config.js  gemini.md  lefthook.yml  mise.toml  n8n_research.md  nx.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  (+13 more)
.automaker/: app_spec.txt  categories.json
.automaker/context/: CLAUDE.md
.automaker/memory/: api.md  architecture.md  auth.md  database.md  gotchas.md  observability.md  performance.md  security.md  testing.md
.claude/: settings.json
.claude/agents/: boardroom-architect.md  boardroom-contrarian.md  boardroom-integrator.md  boardroom-pragmatist.md  boardroom-strategist.md  governance.md  research-critic.md  research-explorer.md  research-validator.md  skill-summarizer.md  style-analyzer.md  style-corrector.md  style-summarizer.md
.claude/commands/: agentic-refactoring.md  brainstorm.md  create-agent.md  create-command.md  create-skill.md  decompose.md  implement.md  infrastructure-refactor.md  lib-docs.md  list-skills.md  list-tools.md  plan.md  prime.md  refactor.md  refine-agent.md  refine-command.md  refine-skill.md  refine-style.md  research.md  review-typescript.md  test.md  tools.md
.claude/hooks/: load-skill-index.py  quality-gate.py  setup-env.sh  validate-spec.sh  webhook-emit.py
.claude/plans/: agnostic-infrastructure.md  command-deep-review.md  commit-convention-enforcement-research.md  section-reorganization-plan.md
.claude/rules/: git-conventions.md  monorepo.md  observability.md  testing.md
.claude/scripts/: bootstrap-cli-tools.sh
.gemini/: GEMINI.md
.gemini/commands/: aflow.toml  context-optimize.toml  document.toml  gemini-architect.toml  gemini-implement.toml  gemini-invoke.toml  gemini-review.toml  gemini-scheduled-triage.toml  gemini-triage.toml  init-protocol.toml  plan.toml  refactor.toml  test-gen.toml  think.toml
.gemini/standards/: communication-standards.md  constitution.md  domain-automation.md  domain-components.md  manifesto.md  mcp-tactics.md  research-protocol.md  workflow.md
.github/: AGENTIC_PM_PLAN.md  ARCHITECTURE.md  CONCURRENCY_FIX.md  N8N_SETUP.md  PR_COMMENT_INTEGRATION.md  PR_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  RENOVATE_PIN_FIX.md  REVIEW_FIXES_SUMMARY.md  WORKFLOW_OPTIMIZATION.md  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  build.yml  chore.yml  ci.yml  config.yml  docs.yml  enhancement.yml  feature_request.yml  help.yml  optimize.yml  perf.yml  project.yml  refactor-task.yml  refactor.yml  spike.yml  style.yml  task.yml  test.yml
.github/actions/: README.md
.github/agents/: cleanup-specialist.agent.md  csharp-advanced.agent.md  documentation-specialist.agent.md  grasshopper-implementation.agent.md  integration-specialist.agent.md  library-planner.agent.md  performance-analyst.agent.md  plugin-architect.agent.md  react-specialist.agent.md  refactoring-architect.agent.md  rhino-implementation.agent.md  testing-specialist.agent.md  typescript-advanced.agent.md  vite-nx-specialist.agent.md
.github/commands/: gemini-invoke.toml  gemini-review.toml
.github/docs/: workflow-system.md
.github/prompts/: triage.prompt.yml
.github/rulesets/: ruleset-automation-updates.json  ruleset-feature-shaping.json  ruleset-main-quality-gate.json  ruleset-prerelease-tags.json  ruleset-release-tags.json
.github/scripts/: CHANGE_DETECTION.md  MIGRATION_CHANGE_DETECTION.md  PR_COMMENT_AGGREGATOR.md  ai-meta-cli.ts  ai-meta-parser.ts  ai-meta.ts  auto-merge.ts  bundle-sizes.ts  changed-detection.ts  dashboard.ts  env.ts  failure-alert.ts  gate.ts  issue-ops.ts  label-validator.ts  label.ts  maintenance.ts  meta-validate.ts  pr-comment-aggregator.ts  pr-hygiene.ts  pr-meta.ts  pr-sync.ts  probe.ts  release.ts  report.ts  review.ts  schema.ts
.github/workflows/: active-qc.yml  agentic-sync.yml  ai-assist.yml  ai-maintenance.yml  ai-meta-sync.yml  auto-labeler.yml  auto-merge.yml  biome-repair.yml  bundle-analysis.yml  ci.yml  claude-code-review-enhanced.yml  claude-code-review.yml  claude-issues.yml  claude-maintenance.yml  claude-pr-review.yml  claude.yml  dashboard.yml  deploy.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  issue-commands.yml  issue-lifecycle.yml  kargadan-release.yml  label-validator.yml  n8n-sync.yml  passive-qc.yml  pr-review-aggregator.yml  pr-review.yml  release.yml  renovate-automerge.yml  security.yml  semantic-commits.yml  sonarcloud.yml  validate-protocols.yml  vps-sync.yml
.nx/workflows/: distribution-config.yaml
.planning/: AUDIT_PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ADVANCED-RESEARCH.md  ARCHITECTURE.md  CLUSTER.md  EXPERIMENTAL.md  FEATURES.md  INTEGRATION.md  PITFALLS.md  PLATFORM-HTTP.md  PLATFORM-REALTIME.md  RPC.md  STACK.md  SUMMARY.md  WORKFLOW.md
apps/api/: Dockerfile  package.json  tsconfig.json  vite.config.ts
apps/cs-analyzer/: AnalyzerReleases.Unshipped.md  (+3 more)
docs/: AGENTIC-INFRASTRUCTURE.md  AUTOMATION.md  INTEGRATIONS.md  NX-CAPABILITIES.md  agentic-labels.md
infrastructure/: ARCHITECTURE.md  ENVIRONMENT_VARIABLES.md  Pulumi.yaml  bootstrap.sh  doppler.yaml  package.json  tsconfig.json
plugins/: effect-patterns.grit  functional-patterns.grit  zod-patterns.grit
scripts/: create-labels.sh  generate-pwa-icons.ts
tests/: package.json  setup.ts  tsconfig.json
tools/: parse-agent-context.ts  sync-agent-protocols.ts  tsconfig.json
(+893 files in other folders)
